Remove the need for relative positioning causing layout issues

--- a/wagtailio/static/css/components/alert.scss
+++ b/wagtailio/static/css/components/alert.scss
@@ -7,7 +7,6 @@
     display: block;
     opacity: 1;
     padding: 1rem;
-    position: relative;
     z-index: 10;
   }
 
